# solana-defi

./: .gitignore  README.md
kagg/: Anchor.toml  Cargo.toml
kagg-engine/: Cargo.toml
kagg-engine/src/: lib.rs  types.rs
kagg-engine/src/builder/: mod.rs  route_plan.rs
kagg-engine/src/graph/: mod.rs  token_graph.rs
kagg-engine/src/pool/: clmm_pool.rs  cpamm_pool.rs  mod.rs
kagg-engine/src/router/: mod.rs  optimizer.rs  pathfinder.rs
kagg-engine/tests/: engine_tests.rs
kagg/programs/kagg/: Cargo.toml  kagg-keypair.json
kagg/programs/kagg/src/: errors.rs  lib.rs  types.rs
kagg/programs/kagg/src/adapters/: kclmm.rs  kpool.rs  mod.rs
kagg/tests-litesvm/: Cargo.toml
kagg/tests-litesvm/src/: lib.rs
kclmm/: Anchor.toml  README.md
kclmm/programs/kclmm/: Cargo.toml
kclmm/programs/kclmm/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
kclmm/programs/kclmm/src/instructions/: add_liquidity.rs  close_position.rs  collect_fees.rs  init_pool.rs  init_tick_array.rs  mod.rs  open_position.rs  remove_liquidity.rs  swap.rs
kclmm/tests-litesvm/: Cargo.toml
kclmm/tests-litesvm/src/: lib.rs
klend/: Anchor.toml  README.md
klend/programs/klend/: Cargo.toml
klend/programs/klend/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
klend/programs/klend/src/instructions/: borrow.rs  deposit.rs  health.rs  init_market.rs  init_mock_oracle.rs  init_reserve.rs  mod.rs  (+5 more)
klend/tests-litesvm/: Cargo.toml
klend/tests-litesvm/src/: lib.rs
klev/: Anchor.toml  Cargo.toml  README.md
klev/programs/klev/: Cargo.toml  keypair.json
klev/programs/klev/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
klev/tests-litesvm/: Cargo.toml
klev/tests-litesvm/src/: lib.rs
kpool/: Anchor.toml  README.md
kpool/programs/cpamm/: Cargo.toml
kpool/programs/cpamm/src/: constants.rs  errors.rs  lib.rs  state.rs
kpool/tests-litesvm/: Cargo.toml
kpool/tests-litesvm/src/: lib.rs
krouter/: Anchor.toml  Cargo.toml
krouter/programs/krouter/: Cargo.toml
krouter/programs/krouter/src/: cpi_helpers.rs  errors.rs  lib.rs  types.rs
krouter/programs/krouter/src/instructions/: mod.rs  route_split.rs  route_two_hop.rs  swap_kclmm.rs  swap_kpool.rs
krouter/tests-litesvm/: Cargo.toml
krouter/tests-litesvm/src/: lib.rs
kusd/: Anchor.toml  README.md
kusd/programs/kusd/: Cargo.toml  keypair.json
kusd/programs/kusd/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
kusd/programs/kusd/src/instructions/: accrue_fees.rs  common.rs  deposit_collateral.rs  init_mock_oracle.rs  init_vault.rs  liquidate.rs  mint_kusd.rs  mod.rs  open_position.rs  repay_kusd.rs  set_halt.rs  update_mock_oracle.rs  withdraw_collateral.rs
kusd/tests-litesvm/: Cargo.toml
kusd/tests-litesvm/src/: lib.rs
kvault/: Anchor.toml  README.md
kvault/programs/kvault/: Cargo.toml
kvault/programs/kvault/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
kvault/tests-litesvm/: Cargo.toml
kvault/tests-litesvm/src/: lib.rs
research/: 01-defi-fundamentals.md  02-amms-and-dexes.md  03-lending-and-borrowing.md  04-where-yield-comes-from.md  05-stablecoins-and-defi-failures.md  06-solana-defi-ecosystem.md  07-key-papers-and-math.md  08-defi-protocol-design.md  09-advanced-strategies-and-trends.md  README.md
research/tokenomics/: 01-tokenomics-fundamentals.md  02-token-supply-mechanics.md  03-token-distribution-and-launch.md  04-token-utility-and-value-accrual.md  05-staking-and-vote-escrow.md  06-governance-tokenomics.md  07-tokenomics-program-level.md  08-tokenomics-case-studies.md  09-tokenomics-design-framework.md  README.md
(+20 files in other folders)
