[package]
name = "kusd-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
litesvm = "0.7"
solana-sdk = "2"
spl-token = "7"
spl-associated-token-account = "6"
kusd = { path = "../programs/kusd", features = ["no-entrypoint"] }
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
