[package]
name = "krouter"
version = "0.1.0"
description = "DEX Aggregator / Router"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "krouter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = "0.32.1"
cpamm = { path = "../../../kpool/programs/cpamm", features = ["cpi"] }
kclmm = { path = "../../../kclmm/programs/kclmm", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
